# pikachu

./: .gitignore  README.md  data.txt  delete.py  pyproject.toml  requirements.txt  test  test.cpp  test.py  test2.py  user.txt  wsgi.py
API/: bot_api.db  bot_api.txt  gemini_api.db  gemini_api.txt
Conversation/: conversation-5888166321.txt  conversation-6226239719.txt  conversation-group--1002798120187.txt  conversation-group.txt
Logs/: log.txt  logs_creator.py  profile.stats  view_stats.py
Main/: Gemini_bot.py  bot.py  bot1.py  bot_core.py  main.py  response.txt  stable_main.py  test.py  test2.py
admin/: admin.db  admin_password.shadow  admin_password.txt
ai/: gemini_schema.py
bot/: callback.py  command_handler.py  echo.py  info_handler.py  media_handler.py  webhook.py
circulation/: circulate.py
conv/: conv_tool.py
data/: user_content_tools.py
ext/: user_content_tools.py
font/: DejaVuB.pkl  DejaVuI.pkl  arial.pkl
info/: admin_help.shadow  admin_help.txt  gemini_model.db  gemini_model.txt  getting_api.shadow  getting_api.txt  group-rules.txt  group_rules.shadow  group_training_data.shadow  help.shadow  help.txt  ids.shadow  rules.shadow  rules.txt  user_data.db  webhook_url.shadow  webhook_url.txt
memory/: memory-5888166321.txt  memory-6226239719.txt
persona/: default_persona.txt  maria.shadow  memory_persona.shadow  memory_persona.txt  nyx.shadow  nyx.txt  onyx.shadow  onyx.txt  sec_c.shadow  sec_c.txt  shai.shadow  shai.txt
routes/: web_panel.py  web_panel_fastapi.py
settings/: user_settings.db
templates/: 404.html
utils/: config.py  (+5 more)
(+113 files in other folders)
